Updated the pages

--- a/aboutme.html
+++ b/aboutme.html
@@ -2,14 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>About Me </title>
+    <style>
+        .img-align {
+            width : 30px;
+        }
+        .gaps {
+            display: flex;
+            gap: 15px;
+            justify-content: center;
+        }
+        .div-align {
+            text-align: center;
+        }
+        a {
+            text-decoration: none;
+            color: dodgerblue;
+        }
+    </style>
 </head>
 <body>
     <header>
         <h1>About Me</h1>
         <nav>
             <a href="index.html">Home</a> <span>| </span>
+            <a href="contactme.html">Contact Me</a> <span>| </span>
             <a href="aboutme.html">About Me</a>
+
         </nav>
     </header>
     <p>My name is Arjun M Kandhan , I am from Banglore.
