Linked Forms to the page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <nav>
             <a href="index.html">Home</a> <span> | </span>
             <a href="aboutme.html">About Me</a> <span> | </span>
+            <a href="form.html">User-details-Form</a> <span> | </span>
             <a href="contactme.html">Contact Me</a>
         </nav>
     </div>
