linked the files nav

--- a/form.html
+++ b/form.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="form-style.css">
 </head>
 <body>
-
+    <div class = "div-align">
+        <nav>
+            <a href="index.html">Home</a> <span> | </span>
+            <a href="aboutme.html">About Me</a> <span> | </span>
+            <a href="form.html">User-details-Form</a> <span> | </span>
+            <a href="contactme.html">Contact Me</a>
+        </nav>
+    </div>
     <h4>Enter User Details </h4>
 
     <form action = "thankyou.html" method = "get" target = "_blank" autocomplete = "on">
