--- a/aboutme.html
+++ b/aboutme.html
@@ -24,12 +24,14 @@
 <body>
     <header>
         <h1>About Me</h1>
-        <nav>
-            <a href="index.html">Home</a> <span>| </span>
-            <a href="contactme.html">Contact Me</a> <span>| </span>
-            <a href="aboutme.html">About Me</a>
-
-        </nav>
+        <div class = "div-align">
+            <nav>
+                <a href="index.html">Home</a> <span> | </span>
+                <a href="aboutme.html">About Me</a> <span> | </span>
+                <a href="form.html">User-details-Form</a> <span> | </span>
+                <a href="contactme.html">Contact Me</a>
+            </nav>
+        </div>
     </header>
     <p>My name is Arjun M Kandhan , I am from Banglore.
         I am pursuing B Tech in Computer Science and Engineering at VIT Vellore</p>
